make dependencies on tasks optional and adapted FunctionalTest
this way tasks can be used separately

--- a/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
+++ b/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
@@ -56,5 +56,12 @@ text.srcFileName = 'time.data'
 
 selectCrossvalidationFiles.dependsOn wav, text, lab
 
+generateCrossvalidationInputFiles.dependsOn selectCrossvalidationFiles
+
 legacyInit.dependsOn wav, text, lab, selectCrossvalidationFiles, generateCrossvalidationInputFiles
 
+synthesizeCrossvalidationAudio.dependsOn('build')
+
+getRealisedDurations.dependsOn synthesizeCrossvalidationAudio
+
+runCrossvalidation.dependsOn getRealisedDurations, synthesizeCrossvalidationAudio
