put "getReference" in new Groovy task "MoveReferenceFiles"

--- a/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
+++ b/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
@@ -64,4 +64,4 @@ synthesizeCrossvalidationAudio.dependsOn('build')
 
 getRealisedDurations.dependsOn synthesizeCrossvalidationAudio
 
-runCrossvalidation.dependsOn getRealisedDurations, synthesizeCrossvalidationAudio
+runCrossvalidation.dependsOn getRealisedDurations, synthesizeCrossvalidationAudio, moveReferenceFiles
