add optional cvExcludeList
+ updated and fixed README

--- a/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
+++ b/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
@@ -57,6 +57,7 @@ text.srcFileName = 'time.data'
 selectCrossvalidationFiles {
     dependsOn wav, text, lab
     selectCrossvalidationFiles.excludeList = ["time0001"]
+    selectCrossvalidationFiles.cvExcludeList = ["time0002"]
 }
 
 generateCrossvalidationInputFiles.dependsOn selectCrossvalidationFiles
