fix failing travis-tests with correction on dependency

--- a/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
+++ b/src/test/resources/de/dfki/mary/voicebuilding/build.gradle
@@ -61,8 +61,8 @@ selectCrossvalidationFiles {
 
 generateCrossvalidationInputFiles.dependsOn selectCrossvalidationFiles
 
-legacyInit.dependsOn wav, text, lab, selectCrossvalidationFiles, generateCrossvalidationInputFiles
+legacyInit.dependsOn wav, text, lab, selectCrossvalidationFiles, generateCrossvalidationInputFiles, moveReferenceFiles
 
 getRealisedDurations.dependsOn synthesizeCrossvalidationAudio
 
-runCrossvalidation.dependsOn getRealisedDurations, synthesizeCrossvalidationAudio, moveReferenceFiles
+runCrossvalidation.dependsOn getRealisedDurations, synthesizeCrossvalidationAudio
